@@ -40,7 +40,7 @@ image:
 {{- with .Values.image}}
   registry: {{.registry | quote}}
   image: {{.name | quote}}
-  tag: {{.tag | quote}}
+  tag: {{.tag | coalesce .Chart.AppVersion | quote}}
   pullPolicy: {{.pullPolicy | quote}}
 {{- end}}
 livenessProbe:
